Added logic for image generation by Unsplash